@@ -1,4 +1,9 @@
 
+* master *
+
+* TinyTDS enhancements for lost connections.
+
+
 * 3.0.10 *
 
 * Fix #rowtable_orders visitor helper to use first column if no pk column was found.
